# StableHLO-Extracter

./: .gitignore  README.md  flake.nix  go.sh  pyproject.toml
src/stablehlo_extracter/: __init__.py
