[project]
name = "stablehlo-extracter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.7.1",
    "torch==2.5.0",
    "torch-xla==2.5.0",
]

[project.scripts]
extract = "stablehlo_extracter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"